# pico_bevy

./: Cargo.toml  README.md
crates/core/: Cargo.toml
crates/core/src/: gpio.rs  lib.rs
crates/i2c/: Cargo.toml
crates/i2c/src/: address.rs  bus.rs  lib.rs  plugin.rs
crates/uart/: Cargo.toml
crates/uart/src/: lib.rs  plugin.rs
src/: lib.rs
