[package]
name = "pico-bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
pico-bevy-core = {workspace = true}
embedded-alloc = {version = "0.6.0", optional = true}

[features]
default = ["heap_size_100kb", "uart"]
heap = ["embedded-alloc"]
heap_size_100kb = ["heap"]

[workspace.dependencies]
bevy = {version = "0.17", default-features = false}
embassy-rp = {version = "0.9", features = ["rp2040", "critical-section-impl"]}
defmt = {version = "1.0.1", default-features = false}
pico-bevy-core = {path = "crates/core"}
embedded-hal = {version = "1", default-features = false}
