[package]
name = "pico-bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
pico-bevy-core = {workspace = true}
pico-bevy-uart = {path = "crates/uart", optional = true}
pico-bevy-i2c = {path = "crates/i2c", optional = true}
embedded-alloc = {version = "0.6.0", optional = true}

[features]
default = ["heap_size_100kb", "uart", "i2c"]
heap = ["embedded-alloc"]
heap_size_100kb = ["heap"]
uart = ["dep:pico-bevy-uart", "pico-bevy-core/uart"]
i2c = ["dep:pico-bevy-i2c", "pico-bevy-core/i2c"]
defmt = ["pico-bevy-core/defmt"]

[workspace.dependencies]
bevy = {version = "0.17", default-features = false}
embassy-rp = {version = "0.9", features = ["rp2040", "critical-section-impl"]}
defmt = {version = "1.0.1", default-features = false}
pico-bevy-core = {path = "crates/core"}
embedded-hal = {version = "1", default-features = false}
