[package]
name = "pico-bevy-uart"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = {workspace = true}
embassy-rp = {workspace = true}
defmt = {workspace = true, optional = true}
pico-bevy-core = {features = ["uart"], workspace = true}
embedded-hal = {workspace = true}

[features]
default = ["defmt"]
defmt = ["dep:defmt"]